Changes requested by Fred

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -33,25 +33,6 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
-  <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
-    <div class="container d-flex">
-      <div class="contact-info mr-auto">
-        <i class="icofont-envelope"></i> <a href="mailto:info@bccmadvisors.com">info@bccmadvisors.com</a>
-        <i class="icofont-phone"></i> +1 (612) 200-1740
-      </div>
-      <!--
-        <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
-      </div>
-      -->
-    </div>
-  </div>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
@@ -185,57 +166,37 @@
       </div>
     </section><!-- End Our Philosophy Section -->
 
-    <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="why-us">
+    <!-- ======= Highlights Section ======= -->
+    <section id="highlights" class="highlights">
       <div class="container">
 
         <div class="row">
-
-          <div class="col-lg-4" data-aos="fade-up">
+          <div class="col-lg-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
-              <span>01</span>
-              <h4>Highlight</h4>
-              <p>Notes</p>
+              <h4>Our Investment in Paga</h4>
+                <p>Our Direct Investment in Paga  is helping expand financial inclusion in Nigeria. Learn more <a href="https://www.mypaga.com/" target="blank">here</a>.</p>
             </div>
           </div>
 
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
+          <div class="col-lg-6" data-aos="fade-up">
             <div class="box">
-              <span>02</span>
-              <h4>Highlight</h4>
-              <p>Notes</p>
+              <h4>The African Opportunity</h4>
+                <p>Watch Fred Steiner, CFA discuss the opportunities on the African continent <a href=" https://moiglobal.com/zppod-fred-steiner-2020/" target="_blank">here</a>.</p>
             </div>
           </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
-            <div class="box">
-              <span>03</span>
-              <h4> Highlight</h4>
-              <p>Notes </p>
-            </div>
-          </div>
-
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section><!-- End Highlights Section -->
 
     <!-- ======= Banner Section ======= -->
     <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
-
         <div class="row d-flex align-items-center">
-          <!--  THIS IS A SMALL BANNER AND YOU CAN ADD IMAGES AS SHOWN BELOW
-          <div class="col-lg-2 col-md-4 col-6">
-            <img src="{% static 'website/img/clients/client-1.png' %}" class="img-fluid" alt="">
-          </div>
-          -->
-          <div>
-              <br>
-              <br>
-          </div>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/paga-logo-small.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
         </div>
-
       </div>
     </section><!-- End Banner Section -->
 
