--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -65,10 +65,10 @@
           <li><a href="home.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#team">Who We Are</a></li>
-          <li class="drop-down"><a href="">Funds</a>
+          <li class="drop-down"><a href="">Strategies</a>
             <ul>
-              <li><a href="africafund.html">The Africa Fund</a></li>
-              <li><a href="smcap.html">The Small-Mid Cap Fund</a></li>
+              <li><a href="africafund.html">Africa</a></li>
+              <li><a href="smcap.html">U.S Small and Mid Cap</a></li>
             </ul>
           </li>
           <li><a href="#contact">Contact Us</a></li>
@@ -142,7 +142,7 @@
             <h3>Focus on Capital Preservation</h3>
             <p class="font-italic">
               Over the long run, the greatest tool to combat downside risk is investing in great businesses. 
-              In the short run, no company’s stock is immune to systemic risk, and as such, our investment theses are supported by proprietary systematic option and volatility overlays for certain hedged strategies.
+              In the short run, no company’s stock is immune to systemic risk, and as such, our investment theses are supported by proprietary systematic option and volatility overlays for certain hedged strategies
               <br>
             </p>
           </div>
@@ -151,45 +151,6 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Highlights Section ======= -->
-    <section id="why-us" class="why-us">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-4" data-aos="fade-up">
-            <div class="box">
-              <span> 1</span>
-              <a href=" https://moiglobal.com/zppod-fred-steiner-2020/" target="_blank">
-              <h4>The African Opportunity</h4>
-                <p>Watch Fred Steiner, CFA discuss the opportunities on the African continent here.</p>
-              </a>
-            </div>
-          </div>
-        
-
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
-            <div class="box">
-              <span> 2</span>
-              <a href="https://paga.frontify.com/d/WHnRJgG6NZvL" target="blank">
-              <h4>Our Investment in Paga</h4>
-                <p>Our Direct Investment in Paga  is helping expand financial inclusion in Nigeria. Learn more here</p>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
-            <div class="box">
-              <span> 3</span>
-              <h4>Highlights</h4>
-              <p>Uncovering High Alpha Potential Opportunities
-                in Less Efficient and Niche Markets</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Highlights Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
@@ -197,8 +158,7 @@
 
         <div class="text-center">
           <h3>Service Providers</h3>
-          <p>
-            We are supported by first-class independent service providers including: Ernst & Young, Goldman Sachs, Apex Fund Services, Nirvana Financial Solutions, Bloomberg, Seward & Kissel, Maples and Calder, and Foley & Lardner.</p>
+          <p> Successful investing is a marathon </p>
         </div>
 
       </div>
@@ -297,7 +257,7 @@
             <div class="member">
               <img src="{% static 'website/img/evans-mugi.png' %}" alt="">
               <h4>Evans Mugi, CAIA</h4>
-              <span>Director of BCCM Advisors (Kenya) Limited</span>
+              <span>Managing Director of BCCM Advisors (Kenya) Limited</span>
               <p>
                 Evans serves as the Managing Director of BCCM Advisors Kenya, and supports Fred Steiner in research, security selection, portfolio construction and business development. 
                 Prior to joining BCCM Advisors, Evans was the head of the investment team at Nabo Capital (the Public Markets arm of Centum Investment Company Kenya), and was responsible for the firm’s investment activities; including capital allocation and risk management — leading a team of associates and analysts. 
