Added a new forest-aerial image

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -181,7 +181,7 @@
           <div class="col-lg-6" data-aos="fade-up">
             <div class="box">
               <h4>The African Opportunity</h4>
-                <p>Watch Fred Steiner, CFA discuss the opportunities on the African continent <a href=" https://moiglobal.com/zppod-fred-steiner-2020/" target="_blank">here</a>.</p>
+                <p>Listen to Fred Steiner’s interview with John Mihaljevic and MOI Global sponsored by The Zurich Project <a href=" https://moiglobal.com/zppod-fred-steiner-2020/" target="_blank">here</a>.</p>
             </div>
           </div>
         </div>
