--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -157,8 +157,7 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Service Providers</h3>
-          <p> Successful investing is a marathon </p>
+          <p> Like how a tree grows exponentially from its sprout, great business models grow exponentially </p>
         </div>
 
       </div>
