--- a/website/templates/smcap.html
+++ b/website/templates/smcap.html
@@ -27,7 +27,7 @@
   <link href="{% static 'website/vendor/aos/aos.css' %}" rel="stylesheet">
   
   <!-- Template Main CSS File -->
-  <link href="{% static 'website/css/style.css' %}" rel="stylesheet">
+  <link href="{% static 'website/css/smcap.css' %}" rel="stylesheet">
 
 </head>
 
