--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -126,6 +126,7 @@
             <p class="font-italic">
               Our lives are dedicated toward the elimination of extreme poverty in Africa.
               <br>
+              <br>
               To achieve this goal, we seek to strengthen the breadth and depth of Africa’s capital markets. 
               <br>
               <br>
@@ -171,17 +172,28 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
+          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
               <h4>Our Investment in Paga</h4>
                 <p>Our Direct Investment in Paga  is helping expand financial inclusion in Nigeria. Learn more <a href="https://www.mypaga.com/" target="blank">here</a>.</p>
             </div>
           </div>
 
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
-              <h4>The African Opportunity</h4>
-                <p>Listen to Fred Steiner’s interview with John Mihaljevic and MOI Global sponsored by The Zurich Project <a href=" https://moiglobal.com/zppod-fred-steiner-2020/" target="_blank">here</a>.</p>
+              <h4>Recommendation To Policymakers</h4>
+                <p>
+                  Read our recommendation to policymakers on share repurchase regulations in Kenya <a href="{% static 'website/pdfs/recommendations.pdf' %}" target="blank">here</a>.
+                </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4" data-aos="fade-up">
+            <div class="box">
+              <h4>Interview with MOI Global</h4>
+                <p>
+                  Listen to Fred Steiner’s interview with John Mihaljevic and MOI Global sponsored by The Zurich Project <a href=" https://moiglobal.com/zppod-fred-steiner-2020/" target="_blank">here</a>.
+                </p>
             </div>
           </div>
         </div>
@@ -198,7 +210,8 @@
           </a>
         </div>
       </div>
-    </section><!-- End Banner Section -->
+    </section>
+    <!-- End Banner Section -->
 
     <!-- ======= Did you know? Section ======= -->
     <section id="didyouknow" class="didyouknow">
