--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -100,10 +100,12 @@
             <p class="font-italic">
               BCCM Advisors is an alternative asset manager focused on making equity investments in businesses that are on the right side of long-term trends. 
               <br>
+              <br>
               We believe one of the few competitive advantages in life are having a longer time horizon than your competitors.
               <br> 
               This view is so fundamental to our core beliefs that it extends to our operational backbone of being wholly owned by a public company.        
-              <br><br><br>
+              <br>
+              <br>
             </p>  
           </div>
         </div>
@@ -114,7 +116,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-right">
-            <img src="{% static 'website/img/minneapolis/minneapolis-street-portrait.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'website/img/minneapolis/sequoia.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>History</h3>
@@ -142,7 +144,7 @@
             <h3>Focus on Capital Preservation</h3>
             <p class="font-italic">
               Over the long run, the greatest tool to combat downside risk is investing in great businesses. 
-              In the short run, no company’s stock is immune to systemic risk, and as such, our investment theses are supported by proprietary systematic option and volatility overlays for certain hedged strategies
+              In the short run, no company’s stock is immune to systemic risk, and as such, our investment theses are supported by proprietary systematic option and volatility overlays for certain hedged strategies.
               <br>
             </p>
           </div>
@@ -157,7 +159,7 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <p> Like how a tree grows exponentially from its sprout, great business models grow exponentially </p>
+          <p> Like how a tree grows exponentially from its sprout, great business models grow exponentially</p>
         </div>
 
       </div>
@@ -405,6 +407,7 @@
                 Nairobi, Kenya
                 <br>
                 +254 20 3673592
+                <br>
                 <br>
               </p>
             </div>
