Service providers banner added

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -202,14 +202,22 @@
     </section><!-- End Highlights Section -->
 
     <!-- ======= Banner Section ======= -->
-    <section id="clients" class="clients">
+    <section id="clients" class="clients">    
       <div class="container" data-aos="zoom-in">
         <div class="row d-flex align-items-center">
+          <h4>        Businesses and Causes We Support:        </h4>
           <a href="https://www.mypaga.com/" target="blank">
             <img src="{% static 'website/img/africafund/paga-logo-small.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
+          <a href="https://www.awf.org/" target="blank">
+            <img src="{% static 'website/img/africafund/african-wildlife-foundation.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.booksforafrica.org/" target="blank">
+            <img src="{% static 'website/img/africafund/books-for-africa.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
         </div>
       </div>
+      
     </section>
     <!-- End Banner Section -->
 
@@ -344,8 +352,38 @@
                 </div>
               </div>
             </div>
-        </div>
 
+            <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+              <div class="member">
+                <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="">
+                <h4>Manit Rye</h4>
+                <span>Risk Management Strategist</span>
+                <p>
+                  Manit Rye is responsible for risk management. 
+                  Manit has more than 30 years’ experience in structuring and trading yield enhancement and hedging strategies on equities, interest rates, and currencies. 
+                  Prior to joining Air T, Inc., Manit was CIO and founder of Asymmetric Capital Management and Thomas Funds Americas LLC and was Managing Director and board member of Merrill Lynch Alternative Investments Inc., where as CO-CIO he focused on investing $10 billion in hedge funds and managed accounts. 
+                  Prior to Merrill, Manit held senior roles in emerging market risk management at UBS O’Connor, Goldman Sachs and Citi Bank. 
+                  Manit earned a Bachelors of Commerce from Dehli University and holds a Masters in Finance from Claremont Graduate School and UC Berkeley.
+                </p>
+                <div class="social">
+                  <a href=""><i class="icofont-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+              <div class="member">
+                <img src="{% static 'website/img/minneapolis/woman.png' %}" alt="">
+                <h4>Prashant Joshi</h4>
+                <span>Trading and Risk Analyst</span>
+                <p>
+                </p>
+                <div class="social">
+                  <a href=""><i class="icofont-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+        </div>
       </div>
     </section><!-- End Team Section -->
 
@@ -418,6 +456,53 @@
           </div>
         </div>
     </section><!-- End Contact Section -->
+
+    <section id="clients" class="clients">
+      <div class="text-center">
+        <h4>Service Providers</h4>
+        <br>
+      </div>
+      
+      <div class="container" data-aos="zoom-in">
+        <div class="row d-flex align-items-right">
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/goldman-sachs.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/bloomberg.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>    
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/ey.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/foley.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/group.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/investec.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/nirvanapng' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/seward-and-kissel.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/standard-bank.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+          <a href="https://www.mypaga.com/" target="blank">
+            <img src="{% static 'website/img/africafund/werksmans.png' %}" class="img-fluid" alt="" width="100" height="50">
+          </a>
+        </div>
+      </div>
+      </p>
+    </section>
+
+    <p>
+      <br>
+    </p>
 
   </main><!-- End #main -->
 
