--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -67,8 +67,8 @@
           <li><a href="#team">Who We Are</a></li>
           <li class="drop-down"><a href="">Strategies</a>
             <ul>
-              <li><a href="africafund.html">Africa</a></li>
-              <li><a href="smcap.html">U.S Small and Mid Cap</a></li>
+              <li><a href="africafund.html">The Africa Strategy</a></li>
+              <li><a href="smcap.html">The Small & SMID Cap Strategies</a></li>
             </ul>
           </li>
           <li><a href="#contact">Contact Us</a></li>
@@ -311,10 +311,10 @@
               </div>
             </div>
           </div>
-        <!--
+        
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/man.jpg' %}" alt="">
               <h4>Ben Peyton</h4>
               <span>Trader</span>
               <p>
@@ -327,7 +327,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/woman.png' %}" alt="">
               <h4>Prashant Joshi</h4>
               <span>Trading and Risk Analyst</span>
               <p>
@@ -337,7 +337,7 @@
               </div>
             </div>
           </div>
-        -->
+        
         </div>
 
       </div>
