--- a/website/templates/smcap.html
+++ b/website/templates/smcap.html
@@ -66,7 +66,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
-      <h1>This is the Smal-Mid Cap Fund</h1>
+      <h1>The Small & SMID Cap Fund</h1>
       <h2>...</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
@@ -103,14 +103,62 @@
           <p>Meet The Team</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+        <div class=row>
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="assets/img/" alt="">
-              <h4></h4>
-              <span>Gary Kohler</span>
+              <img src="{% static 'website/img/minneapolis/gary-kohler.jpg' %}" alt="">
+              <h4>Gary Kohler</h4>
+              <span>Chief Investment Officer and Portfolio Manager</span>
               <p>
-               He's got a lot of experience
+                Gary Kohler is chiefly responsible for executing the investment strategy for BCCM Advisors’ investment portfolios. 
+                Gary has more than 30 years of investment experience managing both family office and hedge fund assets. 
+                Before founding Blue Clay in 2012, Gary was a Partner and Portfolio Manager at Whitebox Advisors and a Vice President and Portfolio Manager at Okabena Company. 
+                In 2007, Gary has twice been recognized for outstanding performance winning the HFM Week Absolute Return Small-Cap Equity Fund of the Year in 2007 and being a finalist for the HFM US Equity Hedge Fund Performance Award in 2018. 
+                Gary earned an MBA from the Johnson School at Cornell University and a BA in Psychology from the University of Minnesota.
+              </p>
+              <div class="social">
+                <a href=""><i class="icofont-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+            <div class="member">
+              <img src="{% static 'website/img/minneapolis/manit-rye.jpg' %}" alt="">
+              <h4>Manit Rye</h4>
+              <span>Risk Management Strategist</span>
+              <p>
+                Manit Rye is responsible for risk management. 
+                Manit has more than 30 years’ experience in structuring and trading yield enhancement and hedging strategies on equities, interest rates, and currencies. 
+                Prior to joining Air T, Inc., Manit was CIO and founder of Asymmetric Capital Management and Thomas Funds Americas LLC and was Managing Director and board member of Merrill Lynch Alternative Investments Inc., where as CO-CIO he focused on investing $10 billion in hedge funds and managed accounts. 
+                Prior to Merrill, Manit held senior roles in emerging market risk management at UBS O’Connor, Goldman Sachs and Citi Bank. 
+                Manit earned a Bachelors of Commerce from Dehli University and holds a Masters in Finance from Claremont Graduate School and UC Berkeley.
+              </p>
+              <div class="social">
+                <a href=""><i class="icofont-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+            <div class="member">
+              <img src="{% static 'website/img/minneapolis/man.jpg' %}" alt="">
+              <h4>Ben Peyton</h4>
+              <span>Trader</span>
+              <p> 
+              </p>
+              <div class="social">
+                <a href=""><i class="icofont-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+            <div class="member">
+              <img src="{% static 'website/img/minneapolis/woman.png' %}" alt="">
+              <h4>Prashant Joshi</h4>
+              <span>Trading and Risk Analyst</span>
+              <p>
               </p>
               <div class="social">
                 <a href=""><i class="icofont-linkedin"></i></a>
