--- a/static/website/css/afro-style.css
+++ b/static/website/css/afro-style.css
@@ -646,11 +646,13 @@ section {
 
 .clients img {
   width: 50%;
-  -webkit-filter: grayscale(100);
-  filter: grayscale(100);
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
   transition: all 0.4s ease-in-out;
-  display: inline-block;
   padding: 15px 0;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .clients img:hover {
@@ -663,6 +665,13 @@ section {
   .clients img {
     width: 40%;
   }
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 /*--------------------------------------------------------------
