Service providers banner added

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -465,34 +465,34 @@
       
       <div class="container" data-aos="zoom-in">
         <div class="row d-flex align-items-right">
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/goldman-sachs.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/bloomberg.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>    
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/ey.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/foley.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/group.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/investec.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/nirvanapng' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/seward-and-kissel.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/standard-bank.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
-          <a href="https://www.mypaga.com/" target="blank">
+          <a href="" target="blank">
             <img src="{% static 'website/img/africafund/werksmans.png' %}" class="img-fluid" alt="" width="100" height="50">
           </a>
         </div>
