Added oldest tree

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -373,7 +373,7 @@
 
             <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
               <div class="member">
-                <img src="{% static 'website/img/minneapolis/woman.png' %}" alt="">
+                <img src="{% static 'website/img/minneapolis/' %}" alt="">
                 <h4>Prashant Joshi</h4>
                 <span>Trading and Risk Analyst</span>
                 <p>
