--- a/website/templates/smcap.html
+++ b/website/templates/smcap.html
@@ -47,7 +47,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">Small-Mid Cap Fund</a></h1>
+      <h1 class="logo mr-auto"><a href="index.html">The Small & SMID Cap Fund</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -55,6 +55,7 @@
         <ul>
           <li class="active"><a href="home.html">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#philosophy">Our Philosophy</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -66,15 +67,14 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
-      <h1>The Small & SMID Cap Fund</h1>
-      <h2>...</h2>
+      <p class="color:white"> There are few competitive advantages in investing, but one of those is to take a longer-term horizon than your competitors. </p>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
+    <!-- ======= About Section ======= 
     <section id="about" class="about">
       <div class="container">
 
@@ -90,7 +90,29 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section> End About Section -->
+
+        <!-- ======= Our Philosophy Section ======= -->
+        <section id="philosophy" class="philosophy">
+          <div class="container">
+            
+            <div class="row">
+              <div class="col-lg-6 order-2 order-lg-2" data-aos="fade-left">
+                <img src="{% static 'website/img/smcap/oldest-tree.jpg' %}" class="img-fluid" alt="">
+              </div>
+              <div class="col-lg-6 pt-4 pt-lg-0 order-1 order-lg-1 content" data-aos="fade-right">
+                <h3>Our Investment Philosophy</h3>
+                <p class="font-italic">
+                  Blue Clay believes there are identifiable inefficiencies in U.S. small and mid-cap securities wherein taking a long-term horizon combined with a defined and repeatable derivative overlay, we are able to construct a highly asymmetric portfolio.
+                </p>
+                <br>
+                <h3>Preservation of Capital</h3>
+                <p>Our investments in great business models operating within the right-side of long-term trends serve as the primary source of capital preservation over the market cycle. This is supported in the short-run by risk-reward optimization through the use of single stock option, VIX Options and long index option overlays within our long / short strategy.</p>
+              </div>
+            </div>
+    
+          </div>
+        </section><!-- End Our Philosophy Section -->
 
 
     <!-- ======= Team Section ======= -->
@@ -142,7 +164,7 @@
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/man.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="">
               <h4>Ben Peyton</h4>
               <span>Trader</span>
               <p> 
@@ -155,7 +177,7 @@
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/woman.png' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="">
               <h4>Prashant Joshi</h4>
               <span>Trading and Risk Analyst</span>
               <p>
