--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -314,7 +314,7 @@
         
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/man.jpg' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="">
               <h4>Ben Peyton</h4>
               <span>Trader</span>
               <p>
@@ -327,7 +327,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
             <div class="member">
-              <img src="{% static 'website/img/minneapolis/woman.png' %}" alt="">
+              <img src="{% static 'website/img/minneapolis/' %}" alt="">
               <h4>Prashant Joshi</h4>
               <span>Trading and Risk Analyst</span>
               <p>
