--- a/website/templates/smcap.html
+++ b/website/templates/smcap.html
@@ -67,8 +67,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
-      <p class="color:white"> There are few competitive advantages in investing, but one of those is to take a longer-term horizon than your competitors. </p>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <h5 style="color: aliceblue;"> There are few competitive advantages in investing, but one of those is to take a longer-term horizon than your competitors. </h5>  
     </div>
   </section><!-- End Hero -->
 
